# miner-client

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/miner_agent/: __init__.py  agent.py  app.py  config.py  dcgm.py  host.py  identity.py  logging_config.py  main.py  main_api.py  protocol.py  state.py  util.py  vllm.py
src/miner_client/: app.py  host.py
tests/: test_agent.py  test_config.py  test_dcgm.py  test_identity.py  test_protocol.py  test_services.py
