[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miner-agent"
dynamic = ["version"]
description = "Node-side control-plane agent for decentralized miner deployments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "cryptography>=42,<46",
  "base58>=2.1,<3",
  "eth-hash[pycryptodome]>=0.7,<1",
  "psutil>=7,<8",
  "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.11,<0.12"]

[project.scripts]
miner-agent = "miner_agent.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "miner_agent._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[dependency-groups]
dev = ["ruff>=0.11.13"]
